--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,6 +27,7 @@ overrides:
       - test/integration/options/watch.spec.js
       - test/integration/helpers.js
       - lib/growl.js
+      - docs/_data/**/*.js
     parserOptions:
       ecmaVersion: 2018
     env:
